# talent-plan

courses/rust/projects/project-1/: Cargo.toml
courses/rust/projects/project-1/src/: lib.rs
courses/rust/projects/project-2/: Cargo.toml  DesignDoc.md
courses/rust/projects/project-2/design/: write_ahead_log.drawio
courses/rust/projects/project-2/src/: cfg.rs  error.rs  lib.rs  txlog.rs
courses/rust/projects/project-2/tests/: tests.rs
