[package]
name = "kvs"
version = "0.1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
